Fixed Overflow

--- a/assets/styles/sass/main.sass
+++ b/assets/styles/sass/main.sass
@@ -48,7 +48,7 @@ body
     color: var(--white)
 
 section
-    overflow: hidden
+    overflow-x: hidden
     z-index: 3
     background-color: var(--main)
     display: flex
